--- a/appdetails.json
+++ b/appdetails.json
@@ -16,7 +16,6 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"51.68.191.75","active":"true","signal":"a"},
-    {"id":1, "file":1, "city":"Sydney","country":"United States","image":"australia","ip":"205.185.119.100","active":"true","signal":"c"}
+    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"219.100.37.211","active":"true","signal":"a"}
   ]
 }
