--- a/appdetails.json
+++ b/appdetails.json
@@ -4,7 +4,7 @@
     "version":"X",
     "title":"VPN app!",
     "description":"The App is available at github.com",
-    "size":""
+    "size":"https://git.io/JeY69"
   }],
   "blocked":[
     {"id":0, "app":"com.android.game"},
