--- a/appdetails.json
+++ b/appdetails.json
@@ -1,9 +1,9 @@
 {
   "ads":"true",
   "update":[{
-    "version":"X",
-    "title":"VPN app!",
-    "description":"The App is available at github.com",
+    "version":"2.8.2000",
+    "title":"Do you like this VPN app? Check the source code!",
+    "description":"The App is available at github.com/gayankuruppu/android-vpn-client-ics-openvpn and follow the developer on GitHub github.com/gayanvoice",
     "size":"https://git.io/JeY69"
   }],
   "blocked":[
@@ -16,6 +16,13 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":1, "city":"Essen","country":"Germany","image":"germany","ip":"219.100.37.211","active":"true","signal":"a"}
+    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"51.68.191.75","active":"true","signal":"a"},
+    {"id":1, "file":0, "city":"Luxemburg","country":"Germany","image":"luxemburg","ip":"51.68.191.75","active":"true","signal":"b"},
+    {"id":2, "file":1, "city":"Las Vegas","country":"United States","image":"unitedstates","ip":"205.185.119.100","active":"true","signal":"c"},
+    {"id":3, "file":1, "city":"Bangkok","country":"United States","image":"thailand","ip":"205.185.119.100","active":"true","signal":"c"},
+    {"id":4, "file":1, "city":"London","country":"United States","image":"unitedkingdom","ip":"205.185.119.100","active":"true","signal":"c"},
+    {"id":5, "file":1, "city":"Singapore","country":"United States","image":"singapore","ip":"205.185.119.100","active":"true","signal":"c"},
+    {"id":6, "file":1, "city":"Sydney","country":"United States","image":"australia","ip":"205.185.119.100","active":"true","signal":"c"}
+    
   ]
 }
