--- a/appdetails.json
+++ b/appdetails.json
@@ -17,6 +17,6 @@
   ],
   "free":[
 
-    {"id":0, "file":0, "city":"Singapore","country":"United States","image":"singapore","ip":"205.185.119.100","active":"true","signal":"c"}
+    {"id":0, "file":""}
   ]
 }
