--- a/appdetails.json
+++ b/appdetails.json
@@ -16,6 +16,6 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-{"id":0,"file":0,"city":0,"country":"United States","image":"unitedstates","active":"true","signal":"a"}
+{"id":0,"file":0,"city":0,"country":"United States","image":"unitedstates","ip":"219.100.37.211","active":"true","signal":"a"}
  ]
 }
