--- a/appdetails.json
+++ b/appdetails.json
@@ -7,15 +7,9 @@
     "size":"https://git.io/JeY69"
   }],
   "blocked":[
-    {"id":0, "app":"com.android.game"},
-    {"id":1, "app":"com.utorrent.client"},
-    {"id":2, "app":"com.torrent.client"},
-    {"id":3, "app":"com.tor.client"},
-    {"id":4, "app":"com.insta.client"},
-    {"id":5, "app":"com.facebook.client"},
-    {"id":6, "app":"com.get.client"}
+    {"id":0, "app":"com.android.game"}
   ],
   "free":[
-{"id":0,"file":0,"city":0,"country":"United States","image":"unitedstates","ip":"219.100.37.211","active":"true","signal":"a"}
+{"id":1,"file":0,"city":0,"country":"United States","image":"unitedstates","ip":"219.100.37.211","active":"true","signal":"a"}
  ]
 }
